--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@tabler/icons-react": "^3.12.0",
+    "@tanstack/react-query": "^5.51.23",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
@@ -26,11 +27,14 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "recharts": "^2.12.7",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.46.1",
+    "viem": "^2.19.6",
+    "wagmi": "^2.12.5",
     "web3": "^4.11.1",
     "zod": "^3.23.8"
   },
