--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@tabler/icons-react": "^3.12.0",
     "@tanstack/react-query": "^5.51.23",
+    "@thirdweb-dev/react": "^4.9.4",
+    "@thirdweb-dev/sdk": "^4.0.99",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ethers": "^5.7.2",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
